--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.11"
 pytest = "^7.4.0"
 factory-boy = "^3.3.0"
 django = "^4.2.3"
+django-rest-framework = "^0.1.0"
 
 
 [build-system]
